Final version with jumping button and fixed text

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
     background-position: center;
     border-radius: 12px;
     gap: 1px;
-    padding-top: 180px;
+    padding-top: 150px;
 
     transform: scale(1.2);
     opacity: 0;
@@ -77,15 +77,15 @@ p {
     font-size: 40px;
 }
 
-/* me */
+/* Cat */
 
-.me {
+.cat {
     width: 250px;
     margin: 10px 0;
     transition: width 0.4s ease;
 }
 
-.letter-window.final .me {
+.letter-window.final .cat {
     width: 180px;
 }
 
